# edurel

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo.py  pyproject.toml
aaa/: t1.py
bbb/: aaa.ipynb  adw-etl.ipynb  adw-olap-reduced-yaml.ipynb  adw-olap.ipynb  conversation.ipynb  conversation.json  db.ipynb  er2mermaid.ipynb  foodmart.ipynb  llm-raw.ipynb  logviewer.ipynb  mermaid.ipynb  ollama.ipynb  play-db.ipynb  play-llm.ipynb  play-mermaid.ipynb  play-olama.ipynb  play-ui.ipynb  play-yaml.ipynb  qman.ipynb  question_man.ipynb  raw-ollama.ipynb  rel_schema_man.ipynb  sman.ipynb  sql_agent.ipynb  sqlite.ipynb  ui.ipynb  widget-listman.ipynb  widgetmermaid.ipynb  yaml.ipynb
config/databases/: company_en.yaml
config/fk_specs/: company_en.yaml
config/omit_tags_specs/: dbstuff.yaml
config/transform_specs/: test1.yaml
conversations/ccfraud/: 02.json  03.json  04.json  total-frac-per-year.json
data/: e1.yaml  e2.yaml
databases/adw-etl/: etl.sql  schema.sql  schema.yaml
databases/adw-olap/: additional-fks.py  q-callcenter.md  q-clv-combined.md  q-clv.md  q-clv01.md  q-clv02.md  q-clv03.md  q-clv04.md  q-clv05.md  q-costs.md  q-customer-cohort.md  q-discounts.md  q-employees.md  q-finance.md  schema.md  (+4 more)
databases/adw-olap-small/: schema.sql  schema.yaml
er/: er.yaml
experiments/: sql-adw-oltp.ipynb  sql-ccfraud.ipynb  sql-company-alt.ipynb  sql-company_de.ipynb  sql-company_en.ipynb
notebooks/: create-adw-oltp.ipynb  create-adw-oltp1.ipynb  mermaid.ipynb  play-db.ipynb  play-llm.ipynb  play-mermaid.ipynb  play-olama.ipynb  play-ui.ipynb  play-yaml.ipynb  sql-company.ipynb  sql-hvs.ipynb
questions/: company_en.txt  zzz_testset.txt
tests/: __init__.py  test_ast_er.py  test_ast_rel.py  test_duckdb_man.py  test_er_trans.py  test_llmchat.py  test_misc.py  test_qman.py  test_rel_schema_man.py  test_rel_trans.py  test_sql_to_yaml.py  test_syntax_er.py  test_syntax_rel.py  test_utils_sql.py  test_yaml.py
(+176 files in other folders)
