[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edurel"
version = "0.1.0"
description = "Education Tools for Relational Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "sqlglot>=28.0",
    "duckdb>=1.4",
    "python-dotenv>=1.2",
    "openai>=2.8",
    "anthropic>=0.74",
    "google-genai>=1.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
notebook = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "notebook>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
