[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "edurel"
version = "0.2.2"
description = "Education Tools for Relational Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "strictyaml",
    "sqlglot",
    "duckdb>=1.5",
    "python-dotenv>=1.2",
    "langchain-core>=1.1",
    "langchain-openai>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
notebook = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "notebook>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
